# snakebot-client-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  log4rs.toml  readme.md  rustfmt.toml  snake.conf
src/: client.rs  main.rs  maputil.rs  messages.rs  snake.rs  structs.rs  types.rs  util.rs  utils.rs
