[package]
name = "snakebot_rust"
version = "1.1.0"
authors = ["Martin Barksten <martin.barksten@cygni.com>"]
license-file = "LICENSE"

[dependencies]
ws = "*"
serde = "^1.0.43"
serde_json = "^1.0.17"
serde_derive = "^1.0.43"
quick-error = "*"
log = "*"
log4rs = { version = "*", features=["toml_format"] }
target_info = "*"
rustc_version = "*"
config = "*"
clap = "*"
