[package]
name = "snakebot_rust"
version = "1.2.0"
description = "A snake client in the least friendly language."
license-file = "LICENSE"
authors = [
  "Martin Barksten <martin.barksten@cygni.com>", 
  "Max Davidson <max.davidson@cygni.se>",
]

[dependencies]
ws = "^0.7.6"
serde = "^1.0.43"
serde_json = "^1.0.17"
serde_derive = "^1.0.43"
log = "^0.4.1"
log4rs = { version = "^0.8.0", features = ["toml_format"] }
target_info = "^0.1.0"
rustc_version = "^0.2.2"
config = "^0.8.0"
clap = "^2.31.2"
